Thu Nov  4 21:13:48 2004  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c(typelib_file_from_typelib): search "win16" 
	  entry to get library path. 

	* ext/win32ole/win32ole.c(oletypelib_path): ditto.

	* ext/win32ole/win32ole.c(ole_typedesc2val): add VT_LPWSTR, VT_LPSTR,
	  VT_ERROR case.

Thu Nov  4 15:02:14 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: forget to initialize instance_variables
	  of TkVarAccess objects

Thu Nov  4 09:11:35 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (gc_mark): enable GC stack checking.

Thu Nov  4 03:11:33 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (str_gsub): lock strings temporarily.  [ruby-dev:24687]

	* ext/socket/socket.c (s_recvfrom): tmplock input buffer.
	  [ruby-dev:24705]

Wed Nov  3 22:24:17 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpauth/digestauth.rb: use Base64.encode64 to
	  avoid warnings.

Wed Nov  3 17:19:59 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* array.c (rb_ary_uniq_bang): do not push frozen string from hash
	  table.  [ruby-dev:24695]

	* array.c (rb_ary_and): ditto.

	* array.c (rb_ary_or): ditto.

Wed Nov  3 17:02:48 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: support to use different Tcl commands between 
	  configure and configinfo

	* ext/tk/lib/font.rb: ditto.

	* ext/tk/lib/itemconfig.rb: support to use different Tcl commands 
	  between item_configure and item_configinfo

	* ext/tk/lib/itemfont.rb: ditto.

	* ext/tk/extconf.rb: install SUPPORT_STATUS

	* ext/tk/lib/tkextlib: some bug fixes (see ext/tk/ChangeLog.tkextlib)

Wed Nov  3 15:38:28 2004  Kouhei Sutou  <kou@cozmixng.org>

	* test/rss/*.rb: removed tab width configuration headers.

	* test/rss/test_maker_{0.9,1.0}.rb: sort -> do_sort.
	
	* lib/rss/maker/*.rb: changed API to RSS version independence.

	* lib/rss/maker/base.rb
	  (RSS::Maker::XMLStyleSheets::XMLStyleSheet): checked required